5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1795_3141.log
== TEST (2019-05-30 16:09:01) 
-- CODE:
from numpy import *

vetor=array(eval(float(input("Vetor: "))))


cont=0
media=0

while(cont<size(vetor)):
	media=media+vetor[cont]**1/6
	cont=cont+1
	
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:09) 
-- CODE:
from numpy import *

vetor=array(float(eval(input("Vetor: ")))
	
	
cont=0
media=0

while(cont<size(vetor)):
	media=media+vetor[cont]**1/6
	cont=cont+1
	
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
File "XXXX", line 6
    cont=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:17) 
-- CODE:
from numpy import *

vetor=array(float(eval(input("Vetor: ")))
	
	
cont=0
media=0

while(cont<size(vetor)):
	media=media+vetor[cont]**1/6
	cont=cont+1
	
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
File "XXXX", line 6
    cont=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:24) 
-- CODE:
from numpy import *

vetor=array(float(eval(input("Vetor: "))))
	
	
cont=0
media=0

while(cont<size(vetor)):
	media=media+vetor[cont]**1/6
	cont=cont+1
	
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:11:16) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
float(vetor)	
cont=0
media=0

while(cont<size(vetor)):
	media=media+vetor[cont]**1/6
	cont=cont+1
	
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:11:55) 
-- CODE:
from numpy import *

vetor=float(array(eval(input("Vetor: "))))
	

cont=0
media=0

while(cont<size(vetor)):
	media=media+vetor[cont]**1/6
	cont=cont+1
	
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:56) 
-- CODE:
from numpy import *

vetor=(array(eval(input("Vetor: ")))
a=float(vetor)	

cont=0
media=0

while(cont<size(a)):
	media=media+a[cont]**1/6
	cont=cont+1
	
media=(media/size(a))**6
print(round(media, 2))
-- ERROR:
File "XXXX", line 4
    a=float(vetor)	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:10) 
-- CODE:
from numpy import *

vetor=(array(eval(input("Vetor: ")))
a=array(float(vetor))	

cont=0
media=0

while(cont<size(a)):
	media=media+a[cont]**1/6
	cont=cont+1
	
media=(media/size(a))**6
print(round(media, 2))
-- ERROR:
File "XXXX", line 4
    a=array(float(vetor))	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:14:25) 
-- CODE:
from numpy import *

vetor=(array(eval(input("Vetor: ")))
	

cont=0
media=0

while(cont<size(vetor)):
	media=media+vetor[cont]**1/6
	cont=cont+1

vetor=float(vetor)		 
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
File "XXXX", line 6
    cont=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:14:34) 
-- CODE:
from numpy import *

vetor=(array(eval(input("Vetor: "))))
	

cont=0
media=0

while(cont<size(vetor)):
	media=media+vetor[cont]**1/6
	cont=cont+1

vetor=float(vetor)		 
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:17) 
-- CODE:
from numpy import *

vetor=(array(eval(input("Vetor: "))), dtype=float)
	

cont=0
media=0

while(cont<size(vetor)):
	media=media+vetor[cont]**1/6
	cont=cont+1

	 
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
File "XXXX", line 3
    vetor=(array(eval(input())), dtype=float)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:48) 
-- CODE:
from numpy import *

vetor=array(float(eval(input("Vetor: "))))
	

cont=0
media=0

while(cont<size(vetor)):
	media=media+vetor[cont]**1/6
	cont=cont+1

	 
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:38) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: "))))
	

cont=0
media=0

while(cont<size(vetor)):
	vetor[i]=float(vetor[i])
	media=media+vetor[cont]**1/6
	cont=cont+1
	
	 
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
File "XXXX", line 3
    vetor=array(eval(input())))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:45) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=0

while(cont<size(vetor)):
	vetor[i]=float(vetor[i])
	media=media+vetor[cont]**1/6
	cont=cont+1
	
	 
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:39) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=0

while(cont<size(vetor)):
	vetor[cont]=float(vetor[cont])
	media=media+vetor[cont]**1/6
	cont=cont+1
	
	 
media=(media/size(vetor))**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:30) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=0

while(cont<size(vetor)):
	vetor[cont]=float(vetor[cont])
	media=media+vetor[cont]**1/6
	cont=cont+1
	
	 
media=media/size(vetor)**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:30) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=0

while(cont<size(vetor)):
	vetor[cont]=float(vetor[cont])
	media=media+vetor[cont]**1/6
	cont=cont+1
	
	 
media=media/size(vetor)**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:42) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=0

while(cont<size(vetor)):
	
	media=media+vetor[cont]**1/6
	cont=cont+1
	
	 
media=media/size(vetor)**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:26) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=0

while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)?n
	cont=cont+1
	
	 

print(round(media, 2))
-- ERROR:
File "XXXX", line 11
    media=(media+vetor[cont]**1/6)?n
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:38) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=0

while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:06) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=0

while(cont<size(vetor)):
	
	media=((media+vetor[cont]**1/6)/size(vetor))**6
	cont=cont+1
	
	 

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:25) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=0

while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:52) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
float(vetor)	

cont=0
media=0

while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:53) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=0

while(cont<size(vetor)-1):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:07) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0


while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:50) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=v[0]

while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:50) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=v[0]

while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:50) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=v[0]

while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:50) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=v[0]

while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:51) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=v[0]

while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:51) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=v[0]

while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:10) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:10) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:07) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)-1):
	
	media=(media+vetor[cont]**1/6)/size(vetor)
	cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:36) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)-1):
	if(vetor[i]>=0)
		media=(media+vetor[cont]**1/6)/size(vetor)
		cont=cont+1
	
	 
media=media**6
print(round(media, 2))
-- ERROR:
File "XXXX", line 10
    if(vetor[i]>=0)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:47) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)-1):
	if(vetor[i]>=0):
		media=(media+vetor[cont]**1/6)/size(vetor)
		cont=cont+1
	else:
	 
media=media**6
print(round(media, 2))
-- ERROR:
File "XXXX", line 15
    media=media**6
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:36) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)-1):
	if(vetor[i]>=0):
		media=(media+vetor[cont]**1/6)/size(vetor)
		cont=cont+1
	else:
	 	media=media
media=media**6		
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:27) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)-1):
	if(vetor[cont]>=0):
		media=(media+vetor[cont]**1/6)/size(vetor)
		cont=cont+1
	else:
	 	media=media
media=media**6		
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:11) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)-1):
	if(vetor[cont]>=0):
		media=(media+vetor[cont]**1/6)/size(vetor)
		
	else:
	 	media=media
	cont=cont=+1	
media=media**6		
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:01) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)-1):
	if(vetor[cont]>=0):
		media=((media+vetor[cont]**1/6)/size(vetor))**6
		
	else:
	 	media=media
	cont=cont=+1	

		
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:41) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)):
	if(vetor[cont]>=0):
		media=((media+vetor[cont]**1/6)/size(vetor))**6
		
	else:
	 	media=media
	cont=cont=+1	

		
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:27) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)):
	
	media=((media+vetor[cont]**1/6)/size(vetor))**6	 	
	cont=cont=+1	

		
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:40) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)):
	
	media=((media+vetor[cont]**1/6)/size(vetor))**6	 	
	cont=cont=+1	

		
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:05) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)):
	
	media=media+((vetor[cont]**1/6)/size(vetor))**6	 	
	cont=cont=+1	

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:40) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)):
	
	media=media+((vetor[cont]**1/6)/size(vetor))**6	 	
	cont=cont=+1	

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:04) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)):
	
	media=media+vetor[cont]**1/6/size(vetor)**6	 	
	cont=cont=+1	

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:22) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=vetor[0]

while(cont<size(vetor)):
	
	media=media+vetor[cont]**1/6/size(vetor)**6	 	
	cont=cont=+1	

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:52) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

cont=0
media=0

while(cont<size(vetor)):
	
	media=media+vetor[cont]**1/6/size(vetor)**6	 	
	cont=cont=+1	

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:13) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:51) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=0
n=size(vetor)
while(cont<n):
	media=media + (vetor[cont]**1/6 / n)**6
	cont=cont+1
	print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:54) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=0
n=size(vetor)
while(cont<n):
	media=media + (vetor[cont]**1/6 / n)**6
	cont=cont+1
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:23) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)
while(cont<n):
	media=media + (vetor[cont]**1/6 / n)**6
	cont=cont+1
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:45) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)
while(cont<n):
	media=(media + vetor[cont]**1/6 / n)**6
	cont=cont+1
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:04) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)
while(cont<n):
	media=media + vetor[cont]**1/6 / n**6
	cont=cont+1
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:43:10) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)
while(cont<n):
	media=media + vetor[cont]**1/6 / n**6
	cont=cont+1
print(round(media, 2))
-- EXECUTION TIME:
0.381335
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
1.9
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
1.1
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
1.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:35) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)
while(cont<n):
	media=media + (vetor[cont]**1/6 / n)**6
	cont=cont+1
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:46) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)
while(cont<n):
	media=media + (vetor[cont]**1/6 / n)**6
	cont=cont+1
print(round(media, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:04) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)
while(cont<n-1):
	media=media + (vetor[cont]**1/6 / n)**6
	cont=cont+1
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:44:11) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)
while(cont<n-1):
	media=media + (vetor[cont]**1/6 / n)**6
	cont=cont+1
print(round(media, 2))
-- EXECUTION TIME:
0.625265
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
1.9
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
1.1
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
1.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:37) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=0
while(cont<n-1):
	media=media + (vetor[cont]**1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:44:43) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=0
while(cont<n-1):
	media=media + (vetor[cont]**1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- EXECUTION TIME:
0.377669
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
1.9
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
1.1
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
1.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:15) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=0
while(cont<n-1):
	media=media + ((vetor[cont]**1/6) / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:32) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=0
while(cont<n):
	media=media + ((vetor[cont]**1/6) / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:13) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<n):
	media=media + ((vetor[cont]**1/6) / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:29) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<n):
	media=media + (vetor[cont]**1/6) / n**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:06) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<n):
	media=media + ((vetor[cont]**)1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
File "XXXX", line 9
    media=media + ((vetor[cont]**)1/6 / n)**6
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:44) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<n):
	media=media+((vetor[cont]**)1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
File "XXXX", line 9
    media=media+((vetor[cont]**)1/6 / n)**6
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:04) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<n):
	media=media+(vetor[cont]**1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:48:17) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<n):
	media=media+(vetor[cont]**1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- EXECUTION TIME:
0.439061
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
1.9
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
1.1
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
1.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:27) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<n):
	media=media+(vetor[cont]**1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:16) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<size(vetor)):
	media=media+(vetor[cont]**1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:41) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=0
n=size(vetor)-1
while(cont<size(vetor)):
	media=media+(vetor[cont]**1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:58) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=0
n=size(vetor)-1
while(cont<size(vetor)):
	media=(media+vetor[cont]**1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:16) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<size(vetor)):
	media=(media+vetor[cont]**1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:45) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<size(vetor)):
	media=media+vetor[cont]**1/6 / n**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:01) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<size(vetor)):
	media=(media+vetor[cont]**1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:11) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<size(vetor)):
	media=media+(vetor[cont]**1/6 / n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:41) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<size(vetor)):
	media=media+((vetor[cont]**1/6) /n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:51) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<size(vetor)):
	media=((media+vetor[cont]**1/6) /n)**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:21) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<n):
	media=((media+vetor[cont]**1/6) /size(vetor))**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:40) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<n):
	media=((media+vetor[cont]**1/6) /size(vetor))**1/6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:48) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]
n=size(vetor)-1
while(cont<n):
	media=((media+vetor[cont]**1/6) /size(vetor))**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:28) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=vetor[cont]

while(cont<size(vetor)):
	media=((media+vetor[cont]**1/6) /size(vetor))**6
	cont=cont+1

print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:54:17) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=0

while(cont<size(vetor)):
	media=((media+vetor[cont]**1/6) /size(vetor))**6
	cont=cont+1

print(round(media, 2))
-- EXECUTION TIME:
0.615653
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:54:18) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=0

while(cont<size(vetor)):
	media=((media+vetor[cont]**1/6) /size(vetor))**6
	cont=cont+1

print(round(media, 2))
-- EXECUTION TIME:
1.20321
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:54:18) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=0

while(cont<size(vetor)):
	media=((media+vetor[cont]**1/6) /size(vetor))**6
	cont=cont+1

print(round(media, 2))
-- EXECUTION TIME:
1.88022
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:54:18) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=0

while(cont<size(vetor)):
	media=((media+vetor[cont]**1/6) /size(vetor))**6
	cont=cont+1

print(round(media, 2))
-- EXECUTION TIME:
2.09503
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:54:18) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))
	
cont=0
media=0

while(cont<size(vetor)):
	media=((media+vetor[cont]**1/6) /size(vetor))**6
	cont=cont+1

print(round(media, 2))
-- EXECUTION TIME:
1.92796
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
